--- a/src/Components/contact.css
+++ b/src/Components/contact.css
@@ -14,18 +14,15 @@
 }
 
 .contact-form input {
-    width: 100%;
     margin: 10px 0;
     padding: 10px;
     border: 1px solid #ccc;
     font-family: 'Rubik';
     font-size: 15px;
     font-weight: 400;
-    color: #000;
 }
 
 .contact-form textarea {
-    width: 100%;
     height: 150px;
     margin: 10px 0;
     padding: 10px;
@@ -33,7 +30,6 @@
     font-family: 'Rubik';
     font-size: 15px;
     font-weight: 400;
-    color: #000;
 }
 
 .contact-form button {
@@ -43,7 +39,7 @@
     border: none;
     cursor: pointer;
     font-family: 'Prata';
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 700;
     color: #fff;
     border: 2px solid #d09e5b;
@@ -137,7 +133,7 @@ footer {
 /* Mobile Phones */
 @media (max-width: 768px) {
     .contact-container {
-        width: 95%;
+        /* width: 92%; */
         position: static;
         transform: none;
     }
@@ -154,7 +150,7 @@ footer {
 /* Extra Small Devices */
 @media (max-width: 480px) {
     .contact-container {
-        width: 100%;
+        /* width: 100%; */
         padding: 20px;
         position: static;
         transform: none;
