--- a/src/Components/contact.css
+++ b/src/Components/contact.css
@@ -1,3 +1,5 @@
+
+
 .contact-container {
     position: absolute;
     left: 50%;
@@ -57,6 +59,7 @@ footer {
     color: white;
     text-align: center;
     padding: 20px;
+    
 }
 
 .footer-content {
@@ -64,7 +67,7 @@ footer {
     justify-content: space-between;
     padding: 20px;
     max-width: 1200px;
-    margin: 0 auto;
+    margin:  auto;
 }
 
 .footer-content h3 {
@@ -90,6 +93,7 @@ footer {
 
 .social-icons {
     margin-top: 10px;
+    display: flex;
 }
 
 .social-icons img {
@@ -104,13 +108,13 @@ footer {
 }
 
 .copyright {
-    font-size: 16px;
+    font-size: 14px;
     margin: 0;
     color: #fff;
     background-color: #414141;
     text-align: center;
     font-family: 'Rubik';
-    padding: 20px;
+    padding: 10px;
 }
 
 
@@ -120,7 +124,7 @@ footer {
 /* Tablets and Smaller Laptops */
 @media (max-width: 1024px) {
     .footer-content {
-        flex-direction: column;
+        /* flex-direction: column; */
         text-align: center;
     }
 
@@ -132,8 +136,10 @@ footer {
 
 /* Mobile Phones */
 @media (max-width: 768px) {
+
+   
     .contact-container {
-        /* width: 92%; */
+        width: 100%;
         position: static;
         transform: none;
     }
@@ -149,6 +155,10 @@ footer {
 
 /* Extra Small Devices */
 @media (max-width: 480px) {
+
+    iframe{
+        padding: 0 10px;
+    }
     .contact-container {
         /* width: 100%; */
         padding: 20px;
