--- a/src/Components/product.css
+++ b/src/Components/product.css
@@ -6,27 +6,33 @@
     margin: 0 auto;
 }
 
-.navlinks {
-    display: flex;
-    justify-content: center;
-    gap: 15px;
+.Bakery-Product h2{
+    font-size: 30px;
+    font-weight: bold;
     margin-bottom: 20px;
 }
 
-.navlinks a {
+/* .navlinks {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin-bottom: 20px;    
+} */
+
+/* .navlinks a {
     text-decoration: none;
     color: black;
     font-size: 16px;
     padding: 10px 15px;
     border-radius: 5px;
     transition: 0.3s;
-}
+} */
 
-.navlinks a.active,
+/* .navlinks a.active,
 .navlinks a:hover {
-    background-color: #f4a261;
+    background-color: #f4a261 !important;
     color: white;
-}
+} */
 
 .product-grid {
     display: grid;
@@ -44,8 +50,9 @@
     transition: 0.3s;
 }
 
-.product:hover {
+.img-hover:hover {
     transform: scale(1.05);
+    transition: ease-in-out 1s;
 }
 
 .see-all-btn {
@@ -86,6 +93,11 @@
 @media (max-width: 480px) {
     .product-grid {
         grid-template-columns: repeat(1, 1fr);
+    }
+    
+
+    .Bakery-Product{
+        padding: 40px;
     }
 
     .navlinks a {
