--- a/src/Components/service.css
+++ b/src/Components/service.css
@@ -42,8 +42,8 @@
     transition: 0.5s ease all;
 }
 
-.service-card .icon {
-    font-size: 40px;
+.service-card  {
+    font-size: 20px;
     margin-bottom: 10px;
     color: #d6a565;
 }
@@ -51,9 +51,11 @@
 .service-card img {
     border: 2px solid black;
     border-radius: 50%;
-    padding: 20px;
+    padding: 15px;
     max-width: 75px;
     margin-bottom: 15px;
+    width: 40px;
+    height: 40px;
 }
 
 .service-card h3 {
